--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -171,6 +171,7 @@
     "@types/oracledb": "5.2.2",
     "@types/pouchdb": "6.4.0",
     "@types/redis": "4.0.11",
+    "@types/server-destroy": "1.0.1",
     "@typescript-eslint/parser": "5.12.0",
     "apidoc": "0.50.4",
     "babel-jest": "27.5.1",
