--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
       yarn bootstrap
       yarn build
       yarn dev:stack:up
-    command: |
+  - command: |
       yarn dev:gitpod
 ports:
   - port: 10000
